available slots computed dynamically via new dtos